--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,18 @@ button {
   }
 }
 
+@keyframes fade-in-from-left {
+  0% {
+    opacity: 0;
+    transform: translateX(-5rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
+}
+
 /* BASE STYLES */
 .app {
   font-family: "Lato", sans-serif;
@@ -36,6 +48,11 @@ button {
   color: #fff;
   height: 100vh;
   width: 100vw;
+}
+
+.app__container {
+  height: calc(100vh - 5.5rem);
+  display: flex;
 }
 
 /* STYLES */
@@ -92,4 +109,89 @@ button {
 }
 
 .dd-toggle__text {
+}
+
+/* ---------------- */
+
+.sidebar {
+  background-color: #10171a;
+  width: 7.5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.menu {
+}
+
+.menu__button {
+  padding: 1.9rem 0;
+  color: rgba(255, 255, 255, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  transition: all 0.4s;
+  animation: fade-in-from-left 0.5s;
+}
+
+.menu__button:hover {
+  background-color: #2b363b;
+  color: #fff;
+  cursor: pointer;
+}
+
+.menu__button:focus {
+  background-color: #2b363b;
+  color: #fff;
+  cursor: pointer;
+}
+
+.menu__button--active {
+  background-color: #2b363b;
+  color: #fff;
+  position: relative;
+}
+
+.menu__button--active::before {
+  content: "";
+  width: 0.3rem;
+  height: 100%;
+  background-color: #375bb6;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.menu__icon {
+  font-size: 1.8rem;
+  margin-bottom: 0.3rem;
+}
+
+.meun__text {
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+
+.footer {
+  margin-top: auto;
+  margin-bottom: 6rem;
+  transform: rotate(-90deg);
+}
+
+.copyright {
+  color: rgba(255, 255, 255, 0.15);
+  font-size: 1.2rem;
+  white-space: nowrap;
+}
+
+/* ----------------- */
+
+.panel {
+  background-color: #2b363c;
+  width: 35rem;
+}
+
+.main {
+  background-color: #edf1f3;
+  flex: 1;
 }
