--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 html {
@@ -38,6 +39,16 @@ button {
   100% {
     opacity: 1;
     transform: translateX(0rem);
+  }
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
 
@@ -189,7 +200,85 @@ button {
 .panel {
   background-color: #2b363c;
   width: 35rem;
+  padding: 1.5rem 3.1rem;
 }
+
+.panel__top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 0.1rem solid #4b5155;
+  padding-bottom: 1.2rem;
+}
+
+.first-heading {
+  font-size: 1.8rem;
+  font-weight: 400;
+}
+
+.panel__collapse-icon {
+  color: #6b7276;
+  cursor: pointer;
+}
+
+.panel__images {
+  padding: 2.5rem 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.8rem;
+}
+
+.panel__img {
+  width: 14rem;
+  height: 14rem;
+  object-fit: cover;
+  border-radius: 0.7rem;
+  cursor: pointer;
+  transition: all 0.2s;
+  animation: fade-in 1s;
+}
+
+.panel__img:nth-child(2) {
+  animation: fade-in 1s 0.1s backwards;
+}
+
+.panel__img:nth-child(3) {
+  animation: fade-in 1s 0.2s backwards;
+}
+
+.panel__img:nth-child(4) {
+  animation: fade-in 1s 0.3s backwards;
+}
+
+.panel__img:nth-child(5) {
+  animation: fade-in 1s 0.4s backwards;
+}
+
+.panel__img:hover {
+  transform: scale(1.05);
+}
+
+.panel__btn {
+  width: 14rem;
+  height: 14rem;
+  background-color: #333e44;
+  border-radius: 0.7rem;
+  cursor: pointer;
+  transition: all 0.2s;
+  animation: fade-in 1s 0.5s backwards;
+}
+
+.panel__btn:hover,
+.panel__btn:focus {
+  background-color: #404c52;
+}
+
+.panel__upload-icon {
+  font-size: 2.5rem;
+  color: #21292d;
+}
+
+/* ----------------- */
 
 .main {
   background-color: #edf1f3;
