--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,30 @@ button {
   }
 }
 
+@keyframes fade-in-from-right {
+  0% {
+    opacity: 0;
+    transform: translateX(5rem);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
+}
+
+@keyframes make-smaller {
+  0% {
+    height: 100%;
+    width: 100%;
+  }
+
+  100% {
+    height: 75%;
+    width: 78%;
+  }
+}
+
 /* BASE STYLES */
 .app {
   font-family: "Lato", sans-serif;
@@ -283,4 +307,157 @@ button {
 .main {
   background-color: #edf1f3;
   flex: 1;
+}
+
+.info-bar {
+  height: 5rem;
+  background-color: #fff;
+  border-bottom: 0.1rem solid #d6dde1;
+  padding: 0 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.breadcrumbs {
+  text-transform: uppercase;
+  letter-spacing: 0.05rem;
+  font-size: 1.2rem;
+}
+
+.breadcrumbs__link {
+  color: #a6adb1;
+  text-decoration: none;
+}
+
+.breadcrumbs__icon {
+  color: #a6adb1;
+  margin: 0 1.3rem;
+}
+
+.breadcrumbs__name {
+  color: #2e3335;
+  font-weight: 500;
+}
+
+.button {
+  background-color: #375bb6;
+  font-size: 1.1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  padding: 0.8rem 2rem;
+  cursor: pointer;
+  border-radius: 50rem;
+  transition: all 0.4s;
+}
+
+.button:hover,
+button:focus {
+  background-color: #26428d;
+}
+
+.artboard {
+  height: calc(100vh - 5rem - 5.5rem);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: -2.5rem;
+  column-gap: 2rem;
+}
+
+.canvas {
+  height: 57.5vh;
+  width: 48.6vw;
+  position: relative;
+  border: 0.1rem solid #fff;
+  border-radius: 0.3rem;
+}
+
+.canvas__bg-img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  opacity: 0.15;
+}
+
+.canvas__fg-img {
+  height: 75%;
+  width: 78%;
+  object-fit: cover;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 0.1rem solid #fff;
+  cursor: grab;
+  animation: make-smaller 1s 0.2s backwards;
+}
+
+.canvas__circle {
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%;
+  background-color: #fff;
+  position: absolute;
+  animation: fade-in 1s 1s backwards;
+}
+
+.canvas__circle:nth-of-type(1) {
+  top: 11.5%;
+  left: 10.4%;
+  cursor: nw-resize;
+}
+
+.canvas__circle:nth-of-type(2) {
+  top: 11.5%;
+  right: 10.4%;
+  cursor: sw-resize;
+}
+
+.canvas__circle:nth-of-type(3) {
+  bottom: 11.5%;
+  left: 10.4%;
+  cursor: nw-resize;
+}
+
+.canvas__circle:nth-of-type(4) {
+  bottom: 11.5%;
+  right: 10.4%;
+  cursor: sw-resize;
+}
+
+.tools {
+  height: 57.5vh;
+  display: flex;
+  flex-direction: column;
+  row-gap: 0.5rem;
+  animation: fade-in-from-right 0.5s;
+}
+
+.tool {
+  background-color: #e1e6e9;
+  height: 4.4rem;
+  width: 4.4rem;
+  border-radius: 0.8rem;
+  color: #404446;
+  transition: all 0.4s;
+  cursor: pointer;
+}
+
+.tool--active {
+  background-color: #2b363b;
+  color: #fff;
+}
+
+.tool:last-child {
+  margin-top: auto;
+}
+
+.tool:hover,
+.tool:focus {
+  background-color: #2b363b;
+  color: #fff;
+}
+
+.tool__icon {
 }
