--- a/styles.css
+++ b/styles.css
@@ -461,3 +461,114 @@ button:focus {
 
 .tool__icon {
 }
+
+/* Media Quries */
+@media (max-width: 1200px) {
+  .panel {
+    display: none;
+  }
+
+  .canvas {
+    width: 67vw;
+  }
+}
+
+@media (max-width: 1000px) {
+  .app__container {
+    height: initial;
+    min-height: 100vh;
+  }
+
+  .sidebar {
+    display: none;
+  }
+
+  .info-bar {
+    padding: 0 2rem;
+  }
+
+  .artboard {
+    padding: 5rem 2rem;
+    margin-top: 0;
+    height: initial;
+  }
+
+  .canvas {
+    width: 100%;
+    height: 50rem;
+  }
+
+  .tools {
+    height: 50rem;
+  }
+}
+
+@media (max-width: 580px) {
+  .dd-toggle:nth-of-type(1),
+  .dd-toggle:nth-of-type(2),
+  .dd-toggle:nth-of-type(3) {
+    display: none;
+  }
+
+  .artboard {
+    flex-direction: column;
+  }
+
+  .canvas {
+    order: 2;
+    height: 45rem;
+  }
+
+  .canvas__circle:nth-of-type(1) {
+    top: 11.5%;
+    left: 9.8%;
+  }
+
+  .canvas__circle:nth-of-type(2) {
+    top: 11.5%;
+    right: 9.8%;
+  }
+
+  .canvas__circle:nth-of-type(3) {
+    bottom: 11.5%;
+    right: 9.8%;
+  }
+
+  .canvas__circle:nth-of-type(4) {
+    bottom: 11.5%;
+    right: 9.8%;
+  }
+
+  .tools {
+    flex-direction: row;
+    column-gap: 0.5rem;
+    order: 1;
+    height: initial;
+    margin-bottom: 1.5rem;
+    align-self: start;
+  }
+
+  .tool:last-child {
+    margin: 0;
+  }
+}
+
+@media (max-width: 440px) {
+  .header {
+    justify-content: space-between;
+  }
+
+  .dd-toggle:nth-of-type(4),
+  .dd-toggle:nth-of-type(5) {
+    display: none;
+  }
+
+  .breadcrumbs__link,
+  .breadcrumbs__icon {
+    display: none;
+  }
+
+  .canvas {
+    height: 40rem;
+  }
+}
